--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .DS_Store
 node_modules/
 /dist/
-/.temp/
+.temp/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -16,3 +16,4 @@ selenium-debug.log
 *.ntvs*
 *.njsproj
 *.sln
+
